--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "portfolio-matthias-dolstra",
   "version": "0.0.1",
   "description": "My portfolio webiste in node.js",
@@ -14,10 +14,12 @@
   "license": "ISC",
   "homepage": "https://dolstra.me",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "gsap": "^1.18.2",
     "hbs": "^4.0.0",
     "jsonfile": "^2.2.3",
+    "momentjs": "^1.1.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
