--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iotfinal-melvin",
+  "name": "iotfinal-senny",
   "version": "0.0.1",
-  "description": "Measuring my sleep",
+  "description": "Be productive at doing your homework",
   "main": "app.js",
   "private": true,
   "scripts": {
@@ -10,9 +10,9 @@
   "repository": {
     "type": "git"
   },
-  "author": "Melvin Reijnoudt",
+  "author": "Senny Kalidien",
   "license": "ISC",
-  "homepage": "http://iotfinal.mreijnoudt.com",
+  "homepage": "http://iot.directzichtbaar.nl",
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
@@ -23,26 +23,15 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.3",
     "babel-preset-es2015": "^6.6.0",
-    "css-mqpacker": "^4.0.1",
-    "cssnext": "^1.8.4",
-    "csswring": "^4.2.2",
-    "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.0.3",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-notify": "^2.2.0",
-    "gulp-postcss": "^6.1.0",
-    "gulp-responsive": "^2.2.0",
-    "gulp-svgmin": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
-    "nodemon": "^1.9.1",
-    "postcss": "^5.0.19"
+    "nodemon": "^1.9.1"
   }
 }
